--- a/GradeSuccess/App.xaml
+++ b/GradeSuccess/App.xaml
@@ -1,7 +1,9 @@
-﻿<Application
-    x:Class="GradeSuccess.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GradeSuccess">
-
+﻿<Application x:Class="GradeSuccess.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:GradeSuccess"
+             StartupUri="MainWindow.xaml">
+    <Application.Resources>
+         
+    </Application.Resources>
 </Application>
